tests/src/frontend/syntax/invalid/matches_as_name.sk
fun main(): void {
  a is n @ 12;
}
